	- `$.on('error', function(err, [op_name]))` catches error
	- `$.on('response', function(response, [op_name]))`
- added `STATUS(id/$, data, [timeout])` for capturing of universal status (executes `DEF.onStatus(meta)`)
- added `DEF.onStatus(meta)` for capturing of universal status
	- `meta.date {Date}` last modified date
	- `meta.data {Object}`
	- `meta.id {String}`

========================
0.0.62
========================

- fixed `NEWMACRO()` compiler
- added `flowstream.secrets` (something similar like variables)
- improved applying of `flowstream.variables`
- fixed initializing of HTTP server with unix-socket
- added support for Windows named pipe
- extended FlowStream by adding `instance.transform([data], callback)` method

========================
0.0.61
========================

- added NoSQL support for QueryBuilder
- fixed FlowStream identifiers when registering component
- fixed schema name in the logs when `CONF.logger` is enabled
- extended `download` argument in the `$.controller.file(filename, [download])` by adding support for `Boolean`
- extended `CONVERT()` by adding support for advanced arrays e.g. `key: [name: String, price: 30]`
- added `F.frameworkless(debug, options, [callback])` that executes HTTP server without Total.js dependencies
- updated `PROXY()` method by adding `check` argument
- fixed `copypath` functionality in the `PROXY()` method
- added auto clearing cache for the `CONVERT()` method
- extended `CORS()` method by returning instance of the route (that can be dynamically removed)
- extended `FlowStream` connections by adding the `color` attribute
- added method `U.set()`
- added method `U.get()`
- added `CONF.default_shell {String}`
- added `SHELL(command, callback, [cwd])` for executing of shell

========================
0.0.60
========================

- added a validation for `Byte`, `TinyInt` and `SmallInt` types in the schemas
- fixed `COPY()` method
- fixed `default_root` config option for static files